syntax = "proto3";

option csharp_namespace = "CountryService.gRPC.Browser.v1";

package CountryService.Browser.v1;

import "google/protobuf/empty.proto";
import "country.shared.proto";

service CountryServiceBrowser {
	rpc GetAll(google.protobuf.Empty) returns (stream CountryReply) {}
	rpc Get(CountryIdRequest) returns (CountryReply) {}
	rpc Update(CountryUpdateRequest) returns (google.protobuf.Empty) {}
	rpc Delete(CountryIdRequest) returns (google.protobuf.Empty) {}
	rpc Create(CountriesCreationRequest) returns (stream CountryCreationReply) {}
}